--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
+@import "bulma/css/bulma.css";
+
+.searchmatch {
+  font-weight: bold;
+  text-decoration: double;
+}
+
+a {
+  text-decoration: none;
+  font-weight: bold;
+  text-decoration: wavy;
+  color: darkblue;
+}
+
+.container {
+  padding: 20px;
+}
